# wasm

./: .gitignore  .travis.yml  LICENSE  NOTES.md  README.md  example1.wasm  example2.wasm  package.yaml  shell  stack.yaml  test.js  test.sh  wasm.cabal  watch
exec/: Main.hs
scripts/: ci.sh
src/: Binary.hs  Core.hs  Driver.hs  Entry.hs  Hex.hs  Lexer.x  Main.hs  Monad.hs  Parser.y  Position.hs  Pretty.hs  Syntax.hs  Test.hs
src/Language/: Wasm.hs
src/Language/Wasm/: Binary.hs  Builder.hs  Core.hs  Driver.hs  Entry.hs  Eval.hs  Hex.hs  Lexer.x  Monad.hs  Parser.y  Position.hs  Pretty.hs  Syntax.hs  Test.hs  Validator.hs  Verify.hs
tests/: Test.hs
tests/failing/: simple.wast  simple.wast.out.wasm
tests/spec/: f32.wast  functions.wast
tests/spec/golden/: fac.wasm  simple.wasm
tests/spec/input/: fac.wast
